crates/editor-codec-macros/tests/compile_fail/missing_tag.stderr
error: missing #[durable(n(N))] on variant
 --> tests/compile_fail/missing_tag.rs:7:5
  |
7 |     A,
  |     ^
